# bbot

./: .gitignore  CLAUDE.md  Databases.db  README.md  SMS_UPDATE_FINDINGS.md  TRANSMISSION_CLI_EXPLORATION.md  agent.py  agent_factory.py  calibre.py  claude_agent.py  download_server.py  fastagent.config.yaml  fastagent.jsonl  main.py  mcp_calibre_server.py  mcp_pdftotext_server.py  mcp_reminder_server.py  mcp_server_transmission.py  mcp_server_utils.py  mcp_sms_server.py  mcp_vlc_server.py  openai_agent.py  pyproject.toml  setup_transmission_daemon.sh  test_adb_fix.py  test_adb_query.py  test_calibre.py  test_email_config.py  test_sms_server.py  test_utils.py  utils.py  vlc.py  vlc_control.py
skills/: document-management.md  ebook-management.md  pdf-processing.md  reminder-management.md  sms-management.md  torrent-management.md  web-content.md
