[project]
name = "bbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fast-agent-mcp==0.2.52",
    "mcp-server-time",
    "mcp-server-calculator",
    "mcp-weather-server",
    "python-telegram-bot",
    "python-dotenv",
    "telegramify-markdown",
    "mcp[cli]",
    "tiktoken",
    "pandocfilters>=1.5.1",
    "pillow>=11.3.0",
    "openai>=1.99.5",
    "transmissionrpc>=0.11",
]
